# Chouine

./: .gitignore  COPYING  SConstruct  icon_chouine.xcf  privacy_policy.md  readme.md  terms_conditions.md
Algo/: CMakeLists.txt
Algo/include/: Algorithme.h  Annonce.h  Announce.h  Card.h  CardList.h  Carte.h  Chouine.h  Joueur.h  JoueurAlgo.h  ListeCartes.h  Pick.h  Pioche.h  Player.h  PlayerAlgo.h
Algo/src/: Algorithme.cpp  Annonce.cpp  Announce.cpp  Card.cpp  CardList.cpp  Carte.cpp  Chouine.cpp  Joueur.cpp  JoueurAlgo.cpp  ListeCartes.cpp  Pick.cpp  Pioche.cpp  Player.cpp  PlayerAlgo.cpp
Algo/test/: ChouineTest.cpp  ChouineTest.vcxproj  ChouineTest.vcxproj.filters  unittests.cpp
Algo/test/Debug/: vc140.idb
Algo/test/Debug/ChouineTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChouineTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Algo/wrapper_godot/: SConstruct  ichouine.cpp  ichouine.h  register_types.cpp  register_types.h
Chouine/: .gitignore  OpenSource.html
Chouine/mobile/: AndroidManifest.xml  (+2 more)
ChouineGame/: build.xml
ChouineTest/: build.xml
Godot/: api_config.json  export_presets.cfg  project.godot  settings.gd
OSS/: jeu_cartes.txt
deploiement/: compile.bat  new_version.py  upload_site_web.py
godot3/: Start.gd  global.gd
images/: blason.xcf  home.xcf  icon.xcf  icon_carre.xcf  icon_chouine.xcf  main_icon.xcf  piece.xcf  points.xcf  points_partie.xcf  tapis.xcf
installeur/: Chouine.nsi  compile.bat  license.txt
testgoto3/: Jeu.gd  Jeu.tscn  Start.gd  acceuil.tscn  carte.gd  project.godot
(+86 files in other folders)
